# rocket-kubernetes

./: .envrc  Cargo.toml  Procfile  Rocket.toml
client/: package.json  tslint.json
client/config/: webpack.config.dev.js  webpack.config.prod.js  webpackDevServer.config.js
client/docker/: Dockerfile
client/scripts/: build.js  start.js
client/src/: App.tsx  configureStore.ts  index.tsx
client/src/actions/: index.tsx
client/src/components/: AddTodo.tsx  App.tsx  Footer.tsx  Hello.test.tsx  Hello.tsx  Link.tsx  Todo.tsx  TodoList.tsx
client/src/constants/: index.tsx
client/src/containers/: AddTodo.tsx  FilterLink.tsx  Hello.tsx  VisibleTodoList.tsx
client/src/reducers/: index.tsx  todo.tsx  visibilityFilter.tsx
client/src/state/: index.ts
deploy/: namespaces.yaml  postgres-deployment.yaml  rocket-deployment.yaml  traefik-deployment.yml  traefik-ingress.yml
deploy/todo-app/: values.yaml
docker/: Dockerfile
k8s/: rocket-controller.yaml  rocket-deployment.yaml  rocket-rc-service.yml  rocket-service.yml  traefik-deployment.yml  traefik-ingress.yml  traefik-ui.yml
migrations/2018-10-11-132156_create_sample_table/: down.sql  up.sql
script/: build-and-push-docker.py  build-and-push-docker.sh  build-musl.sh
server/: Cargo.toml
server/migrations/2018-10-11-132156_create_person_table/: up.sql
server/migrations/2018-10-11-132156_create_todo_table/: up.sql
server/src/: db.rs  lib.rs  models.rs  schema.rs
server/src/handlers/: index.rs  mod.rs  todos.rs
src/: db.rs  lib.rs  models.rs  schema.rs
src/handlers/: users.rs
(+13 files in other folders)
